third_party/move/move-compiler-v2/tests/lambda/inline-parity/bug_10991_noparam2.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/bug_10991_noparam2.move:8:21
  │
8 │         assert!(foo(|_| 3, |_| 10, 10, 100) == 13, 0);
  │                     ^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/bug_10991_noparam2.move:8:28
  │
8 │         assert!(foo(|_| 3, |_| 10, 10, 100) == 13, 0);
  │                            ^^^^^^
